--- a/Dreisatz.tex
+++ b/Dreisatz.tex
@@ -9,13 +9,15 @@
  pdftitle={Dreisatz},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 31.0.50 (Org mode 9.7.11)}, 
+ pdfcreator={Emacs 29.4 (Org mode 9.6.15)}, 
  pdflang={German}}
 \begin{document}
 
 \maketitle
+
+
 \section{Thema: Grundlagen des Dreisatzes}
-\label{sec:org91749f5}
+\label{sec:org1297c27}
 
 
 \begin{itemize}
@@ -26,24 +28,28 @@
 \item Anwendung des Dreisatzes in IT- und kaufmännischen Situationen.
 \end{itemize}
 \end{itemize}
+
 \section{Was ist ein Dreisatz?}
-\label{sec:orgaff311f}
+\label{sec:org6b36070}
 
 Ein Dreisatz ist eine Methode, um Werte in Verhältnissen zu berechnen. Wenn du weißt, wie zwei Werte miteinander verbunden sind, kannst du mithilfe des Dreisatzes andere Werte berechnen.
 
 Beispiel: Wenn ein IT-System 4 Stunden benötigt, um 200 Dateien zu verarbeiten, wie lange dauert es, 500 Dateien zu verarbeiten?
+
 \section{Dreisatz mit geradem Verhältnis}
-\label{sec:org5a4356f}
+\label{sec:org37307e4}
 Manchmal müssen größere oder kleinere Mengen berechnet werden. Das Verhältnis bleibt jedoch immer \textbf{proportional}. D. h. wenn ein Wert auf einer Seite der Rechnung größer wird, wird er auch auf der anderen Seite im gleichen Maß größer. Umgekehrt wird der Wert auf der anderen Seite der Rechnung kleiner, wenn der auf der anderen Seite kleiner wird.
 
 \begin{center}
 \includegraphics[width=.65\linewidth]{Bilder/Dreisatz_gerades_Verhältnis.png}
 \end{center}
+
 \subsection{Beispiel:}
-\label{sec:org3efca4a}
+\label{sec:org9e08fe7}
 Wenn ein IT-Dienstleister 3 Mitarbeiter benötigt, um 15 Server in einer Woche zu warten, wie viele Mitarbeiter sind notwendig, um 30 Server in derselben Zeit zu warten?
+
 \subsection{Schritte:}
-\label{sec:org5abe4aa}
+\label{sec:orge6223db}
 \begin{enumerate}
 \item Berechne die Anzahl der Server pro Mitarbeiter:
 \begin{itemize}
@@ -54,18 +60,21 @@ Wenn ein IT-Dienstleister 3 Mitarbeiter benötigt, um 15 Server in einer Woche z
 \item 30 Server ÷ 5 Server pro Mitarbeiter = 6 Mitarbeiter.
 \end{itemize}
 \end{enumerate}
-\section{4. Dreisatz mit ungeradem Verhältnis}
-\label{sec:org294a607}
+
+\section{Dreisatz mit ungeradem Verhältnis}
+\label{sec:org711e393}
 Ein ungerades Verhältnis, auch indirekt proportional genannt, bedeutet, dass eine Größe abnimmt, während eine andere zunimmt. Das Produkt der beiden Größen bleibt konstant.
 
 \begin{center}
 \includegraphics[width=.65\linewidth]{Bilder/Dreisatz_ungerades_Verhältnis.png}
 \end{center}
+
 \subsection{Beispiel:}
-\label{sec:orgc7439b4}
+\label{sec:orge148190}
 Ein IT-Unternehmen hat einen festen Arbeitsaufwand für ein Projekt. Wenn 5 Entwickler 20 Tage benötigen, um das Projekt abzuschließen, wie viele Tage würden 10 Entwickler benötigen?
+
 \subsection{Schritte:}
-\label{sec:org33115a3}
+\label{sec:orgd48b9bc}
 \begin{enumerate}
 \item \textbf{\textbf{Bekannte Werte notieren:}}
 \begin{itemize}
@@ -85,17 +94,48 @@ Ein IT-Unternehmen hat einen festen Arbeitsaufwand für ein Projekt. Wenn 5 Entw
 
 \textbf{\textbf{Erklärung:}}
 Da der Gesamtarbeitsaufwand konstant bleibt, führt eine Verdopplung der Anzahl der Entwickler zu einer Halbierung der benötigten Zeit. Dies ist ein Beispiel für ein indirekt proportionales Verhältnis.
-\section{5. Übungen}
-\label{sec:orge1c81f6}
-\begin{itemize}
+
+\section{Übungen}
+\label{sec:org7b5f9c3}
+\begin{enumerate}
 \item Ein Server kann 50 Anfragen pro Sekunde verarbeiten. Wie viele Server werden benötigt, um 200 Anfragen pro Sekunde zu bearbeiten?
+\item 8 Arbeiter benötigen 15 Tage, um eine Aufgabe zu erledigen. Wie lange würden 12 Arbeiter für die gleiche Aufgabe benötigen?
+\item Ein Cloud-Speicheranbieter berechnet 5 € pro 100 GB Speicherplatz. Wie viel kostet es, 500 GB zu speichern?
+\item Ein Lager mit Lebensmitteln reicht für 20 Personen 30 Tage. Wie lange würde der gleiche Vorrat für 15 Personen reichen?
+\item Ein Rechenzentrum verbraucht 150 kWh Strom pro Tag. Wie hoch sind die Stromkosten pro Monat (30 Tage), wenn 1 kWh 0,20 € kostet?
+\item Ein Software-Entwickler kann in 8 Stunden 200 Zeilen Code schreiben. Wie lange braucht er, um 500 Zeilen Code zu schreiben?
+\item in Auto fährt mit einer Geschwindigkeit von 60 km/h und benötigt 4 Stunden für eine bestimmte Strecke. Wie lange würde es für die gleiche Strecke benötigen, wenn es mit 80 km/h fährt?
+\item Ein Netzwerkadministrator muss 20 Server aktualisieren. Wenn er 4 Server pro Stunde schafft, wie lange dauert der gesamte Prozess?
 \item Ein Team von 4 Entwicklern benötigt 12 Stunden, um eine Software zu testen. Wie lange würde es dauern, wenn das Team auf 6 Entwickler erhöht wird?
-\end{itemize}
+\item Ein IT-Support-Team hat 120 Tickets pro Woche zu bearbeiten. Wenn das Team 5 Mitarbeiter hat und jeder Mitarbeiter gleich viele Tickets bearbeitet, wie viele Tickets bearbeitet jeder Mitarbeiter pro Woche?
+\end{enumerate}
+
+
 \section{Zusammenfassung}
-\label{sec:orgd584a9e}
+\label{sec:orgf63eb66}
 \begin{itemize}
 \item Beim ungeraden (indirekt proportionalen) Verhältnis führt eine Erhöhung einer Größe zu einer Verringerung der anderen, wobei das Produkt der beiden Größen konstant bleibt.
 \item Typische Beispiele sind Arbeitsaufwand und benötigte Zeit oder Ressourcen und Verarbeitungskapazität.
 \item Das Verständnis dieser Zusammenhänge ist wichtig für die Planung und Optimierung in IT- und kaufmännischen Prozessen.
 \end{itemize}
+
+\clearpage
+\begin{center}
+\includegraphics[width=.65\linewidth]{Bilder/Dreisatz_Comic.png}
+\end{center}
+
+\section{Lösungen}
+\label{sec:org7e005e3}
+\begin{enumerate}
+\item 1 Server / 50 Anfragen * 200 Anfragen = 4 Server
+\item 8 Arbeiter * 15 d / 12 Arbeiter = 10 d
+\item 5 € / 100 GB * 500 GB = 25 €
+\item 150 kWh / 1 d * 30 d =  * 0,20 € = 900,00 €
+\item 20 Personen * 30 d / 15 Personen = 40 d
+\item 8 h / 200 Zeilen * 500 Zeilen = 20 h
+\item 60 km/h * 4 h / 80 km/h = 3 h
+\item 1 h / 4 Server * 20 Server = 5 h
+\item 4 Entwickler * 12 h / 6 Entwickler = 8 h
+\item 120 Tickets * 1 Woche / 5 Mitarbeiter = 24 Tickets
+\end{enumerate}
 \end{document}
