--- a/Prozentrechnung.org
+++ b/Prozentrechnung.org
@@ -20,15 +20,7 @@
 #+SUBTITLE: Kaufmännisches Rechnen in der IT
 #+AUTHOR: WS-LAT
 
-** Thema: Grundlagen der Prozentrechnung
-
-* Ziele:
-  * Verstehen der Grundlagen der Prozentrechnung
-  * Unterscheiden zwischen Prozentrechnung und Prozentrechnung im Hundert
-  * Verbindung zum Dreisatz herstellen
-  * Anwendung in IT-spezifischen Szenarien
-
-** Was ist Prozentrechnung?
+* Was ist Prozentrechnung?
 
 Prozentrechnung ist eine Methode, um Anteile von einem Ganzen zu berechnen. "Prozent" bedeutet "von Hundert" (lateinisch "per centum"). 
 
@@ -37,13 +29,13 @@ Die drei Grundgrößen der Prozentrechnung sind:
 - Prozentsatz (p): Der Anteil in Prozent
 - Prozentwert (W): Der berechnete Anteil
 
-** Verbindung zum Dreisatz
+* Verbindung zum Dreisatz
 
 Die Prozentrechnung lässt sich als Spezialfall des Dreisatzes verstehen:
 - 100% entsprechen dem Grundwert
 - Der gesuchte Prozentwert verhält sich proportional
 
-*** Beispiel als Dreisatz:
+** Beispiel als Dreisatz:
 Ein Server hat eine Kapazität von 1000 GB (Grundwert).
 Wie viel sind 75% davon?
 
@@ -52,41 +44,41 @@ Wie viel sind 75% davon?
    - 1% = 1000 GB ÷ 100 = 10 GB
    - 75% = 10 GB × 75 = 750 GB
 
-** Grundformeln der Prozentrechnung
+* Grundformeln der Prozentrechnung
 
 #+ATTR_HTML: :width 50%
-#+ATTR_LATEX: :width .65\linewidth :placement [!htpb]
+#+ATTR_LATEX: :width .4\linewidth :placement [!htpb]
 #+ATTR_ORG: :width 700
 [[file:Bilder/Prozentrechnung.png]]
 
-*** Prozentwert berechnen:
+** Prozentwert berechnen:
 W = G × p ÷ 100
 
-*** Grundwert berechnen:
+** Grundwert berechnen:
 G = W × 100 ÷ p
 
-*** Prozentsatz berechnen:
+** Prozentsatz berechnen:
 p = W × 100 ÷ G
 
-** Prozentrechnung im Hundert vs. von Hundert
+* Prozentrechnung im Hundert vs. von Hundert
 
-#+ATTR_HTML: :width 50%
-#+ATTR_LATEX: :width .65\linewidth :placement [!htpb]
-#+ATTR_ORG: :width 700
-[[file:Bilder/ProzentrechnungIH.png]]
+# #+ATTR_HTML: :width 50%
+# #+ATTR_LATEX: :width .65\linewidth :placement [!htpb]
+# #+ATTR_ORG: :width 700
+# [[file:Bilder/ProzentrechnungIH.png]]
 
-*** Von Hundert (normale Prozentrechnung):
+** Von Hundert (normale Prozentrechnung):
 - Berechnet einen Anteil vom Grundwert
 - Beispiel: 19% MwSt. von 1000€ Netto = 190€
 
-*** Im Hundert:
+** Im Hundert:
 - Der Prozentwert ist im Grundwert enthalten
 - Wird bei Rabatt- und Mehrwertsteuerberechnungen verwendet
 - Beispiel: In 1190€ (Brutto) sind 19% MwSt. enthalten = 190€
 
-** Anwendungsbeispiele in der IT
+* Anwendungsbeispiele in der IT
 
-*** Beispiel 1: Serverauslastung
+** Beispiel 1: Serverauslastung
 Ein Server zeigt 85% CPU-Auslastung. Die maximale Rechenleistung beträgt 3,6 GHz.
 Wie viel GHz werden aktuell genutzt?
 
@@ -95,7 +87,7 @@ Lösung:
 - Prozentsatz (p) = 85%
 - Prozentwert (W) = 3,6 × 85 ÷ 100 = 3,06 GHz
 
-*** Beispiel 2: Speicherplatzberechnung
+** Beispiel 2: Speicherplatzberechnung
 Ein 2TB Festplattenspeicher ist zu 75% belegt. 
 Wie viel freier Speicher ist noch verfügbar?
 
@@ -105,9 +97,9 @@ Lösung:
 2. Freier Speicher:
    - 2000 GB - 1500 GB = 500 GB
 
-** Prozentrechnung im Hundert in der IT
+* Prozentrechnung im Hundert in der IT
 
-*** Beispiel: Rabattberechnung
+** Beispiel: Rabattberechnung
 Ein Software-Lizenzpaket kostet mit 20% Rabatt 800€.
 Wie hoch war der ursprüngliche Preis?
 
@@ -115,33 +107,33 @@ Lösung:
 - 800€ entsprechen 80% (100% - 20% Rabatt)
 - Grundwert = 800€ × 100 ÷ 80 = 1000€
 
-** Übungen
+* Übungen
 
-1) Ein Server hat eine Auslastung von 90%. Bei maximaler Auslastung können 10.000 Anfragen pro Sekunde verarbeitet werden. Wie viele Anfragen werden aktuell verarbeitet?
+ 1) Ein Server hat eine Auslastung von 90%. Bei maximaler Auslastung können 10.000 Anfragen pro Sekunde verarbeitet werden. Wie viele Anfragen werden aktuell verarbeitet?
+ 2) Ein Unternehmen verkauft eine Software-Lizenz für 2.500 €. Es wird ein Zuschlag von 12 % i. H. erhoben. Wie hoch ist  neue Preis nach dem Zuschlag?
+ 3) Eine SSD mit 1TB Speicher ist zu 60% belegt. Wie viel Speicherplatz ist noch frei (in GB)?
+ 4) Ein Backup-Prozess ist zu 80% abgeschlossen. Bisher wurden 400 GB gesichert. Wie groß ist das gesamte Backup?
+ 5) Ein Softwareunternehmen gewährt 15% Bildungsrabatt. Eine Lizenz kostet mit Rabatt 170€. Wie hoch ist der reguläre Preis?
+ 6) In einem Rechenzentrum kommen 150 fehlerhafte Pakete von insgesamt 10.000 gesendeten Paketen an. Die Fehlerquote beträgt 1,5 % i. H. Wie viele fehlerfreie Pakete wurden korrekt übermittelt?
+ 7) Die CPU-Temperatur eines Servers ist von 45°C auf 54°C gestiegen. Um wie viel Prozent ist die Temperatur gestiegen?
+ 8) Ein Server läuft mit 75 % i. H. seiner maximalen Kapazität von 3,2 GHz. Wie viel GHz nutzt der Server tatsächlich?
+ 9) Eine SSD-Festplatte kostet 200 €. Beim Kauf von 10 Stück gibt es 8 % Skonto i. H.. Wie viel kostet eine SSD nach Abzug des Skontos?
+ 10) Ein Unternehmen gibt 500.000 € für IT-Sicherheit aus. Das gesamte IT-Budget beträgt 2.000.000 €. Die Sicherheitskosten machen 25 % i. H. aus. Wie hoch wäre das gesamte Budget, wenn der Anteil der Sicherheitskosten 30 % i. H. betragen würde?
 
-2) Eine SSD mit 1TB Speicher ist zu 60% belegt. Wie viel Speicherplatz ist noch frei (in GB)?
+#+ATTR_HTML: :width 50%
+#+ATTR_LATEX: :width .65\linewidth :placement [!htpb]
+#+ATTR_ORG: :width 700
+[[file:Bilder/Prozentrechnung_Comic.png]]
 
-3) Ein Softwareunternehmen gewährt 15% Bildungsrabatt. Eine Lizenz kostet mit Rabatt 170€. Wie hoch ist der reguläre Preis?
+* Lösungen
 
-4) Die CPU-Temperatur eines Servers ist von 45°C auf 54°C gestiegen. Um wie viel Prozent ist die Temperatur gestiegen?
-
-5) Ein Backup-Prozess ist zu 80% abgeschlossen. Bisher wurden 400 GB gesichert. Wie groß ist das gesamte Backup?
-
-** Zusammenfassung
-
-- Die Prozentrechnung ist ein Spezialfall des Dreisatzes
-- Unterscheidung zwischen "von Hundert" und "im Hundert" ist besonders bei Preis- und Rabattberechnungen wichtig
-- In der IT wird Prozentrechnung häufig für:
-  * Auslastungsberechnungen
-  * Speicherplatzanalysen
-  * Performancemessungen
-  * Verfügbarkeitsberechnungen
-  * Rabatt- und Preiskalkulationen verwendet
-
-** Lösungen
-
-1) 10.000 × 90 ÷ 100 = 9.000 Anfragen/s
-2) 1000 GB × 40 ÷ 100 = 400 GB frei
-3) 170€ × 100 ÷ 85 = 200€
-4) (54 - 45) × 100 ÷ 45 = 20%
-5) 400 GB × 100 ÷ 80 = 500 GB
+ 1) 10.000 × 90 ÷ 100 = 9.000 Anfragen/s
+ 2) 2.500 € / (100 - 12) * 100 = 2.840,91 €
+ 3) 1000 GB × 40 ÷ 100 = 400 GB
+ 4) 400 GB / 80 * 100 = 500 GB
+ 5) 170€ × 100 ÷ 85 = 200€
+ 6) 10.000 - 150 Pakete = 9.850 Pakete
+ 7) (54 - 45) × 100 ÷ 45 = 20%
+ 8) 200 € / (100 - 8) * 8 = 17,39 €, 200 € - 17,39 € = 182,61 €
+ 9) 400 GB × 100 ÷ 80 = 500 GB
+ 10) 500.000 € / 25 * 30 = 600.000 € + 2.000.000 € = 2.600.000 €
