--- a/BinärHexadezimal.org
+++ b/BinärHexadezimal.org
@@ -126,7 +126,7 @@ Beispiel:
     ~850 GB * 30d = 25.500 GB~
     1) ~25.500 GB / 1.000 = 25,5 TB~
     2) ~25.500 GB * 10⁹ / 2⁴⁰ = 23,1921148951 TiB ≈ 24 TiB~
-    3) ~23,1921148951 TiB * (1024 * 1024) = 24.318.695,0682 MiB ≈ 24.318.695~ 
+    3) ~23,1921148951 TiB * (1024 * 1024) = 24.318.695,0682 MiB ≈ 24.318.696 MiB~   
  3) Lösungswege:
     1) ~15 TiB * (1.024 * 1.024 * 1.024 * 1.024) / (1.000 * 1.000 * 1.000 * 1.000) = 16,4926744166 TB ≈ 17 TB~
     2) ~16,4926744166 TB * 31d * 2 Monate = 1.022,54581383 TB ≈ 1.023 TB~[fn:1]
